--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,7 @@
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
 #set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
 
 # TMUX plugin manager: keep at bottom
 run '~/.tmux/plugins/tpm/tpm'
