--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,5 +3,20 @@ set -g @plugin 'tmux-plugins/tpm'
 #set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 
+# Key bindings
+bind C-l send-keys 'C-l'
+
+is_vim="ps -o state= -o comm= -o pid= \
+      | grep -iE '^[^TXZ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)? +(\\S+\\/)?[0-9]+$' \
+      | sed 's/^.* \\([0-9]*\\)$/\\/proc\\/\\1\\/fd\\/0/g' \
+      | xargs -n1 readlink \
+      | grep -q '#{pane_tty}'"
+
+bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
+bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
+bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
+bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
+bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+
 # TMUX plugin manager: keep at bottom
 run '~/.tmux/plugins/tpm/tpm'
