Configure true colour in tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,5 +6,8 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 # Key bindings
 bind C-l send-keys 'C-l'
 
+# True color!
+set-option -ga terminal-overrides ",xterm-256color:Tc"
+
 # TMUX plugin manager: keep at bottom
 run '~/.tmux/plugins/tpm/tpm'
