--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,7 +3,20 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 
-# Key bindings
+# Key bindings - tmux clipboard buffer
+set-window-option -g mode-keys vi
+unbind [
+bind Escape copy-mode
+bind P paste-buffer
+bind -T copy-mode-vi v send-keys -X begin-selection
+bind -T copy-mode-vi y send-keys -X copy-selection
+bind -T copy-mode-vi r send-keys -X rectangle-toggle
+
+# Key bindings - Paste from Windows clipboard
+bind C-p run "\
+     paste.exe \
+   | tmux load-buffer -b windows-paste-buffer - \
+  && tmux paste-buffer -b windows-paste-buffer"
 
 # True color!
 set-option -ga terminal-overrides ",xterm-256color:Tc"
