Improve tmux copy-mode bindings...
1. reuse original enter-copy-mode binding [
2. add stop-selection binding Q
3. add copy-to-windows binding Y

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,18 +5,18 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 
 # Key bindings - tmux clipboard buffer
 set-window-option -g mode-keys vi
-unbind [
-bind Escape copy-mode
 bind P paste-buffer
 bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-selection
 bind -T copy-mode-vi r send-keys -X rectangle-toggle
+bind -T copy-mode-vi Q send-keys -X stop-selection
 
-# Key bindings - Paste from Windows clipboard
+# Key bindings - Windows clipboard
 bind C-p run "\
      paste.exe \
    | tmux load-buffer -b windows-paste-buffer - \
   && tmux paste-buffer -b windows-paste-buffer"
+bind -T copy-mode-vi Y send-keys -X copy-pipe "clip.exe"
 
 # True color!
 set-option -ga terminal-overrides ",xterm-256color:Tc"
