Configure italics within tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,6 +19,7 @@ bind C-p run "\
 bind -T copy-mode-vi Y send-keys -X copy-pipe "clip.exe"
 
 # True color!
+set-option -g default-terminal "tmux-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 # TMUX plugin manager: keep at bottom
