--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,6 +2,10 @@
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-battery'
+
+# Status bar
+set -g status-right '#{battery_status_bg} Batt: #{battery_icon} #{battery_percentage} | %a %h-%d %H:%M '
 
 # Key bindings - tmux clipboard buffer
 set-window-option -g mode-keys vi
