Fix delay in neovim escape

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -26,5 +26,8 @@ bind -T copy-mode-vi Y send-keys -X copy-pipe "clip.exe"
 set-option -g default-terminal "tmux-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 
+# Don't delay <Esc> for neovim
+set -sg escape-time 10
+
 # TMUX plugin manager: keep at bottom
 run '~/.tmux/plugins/tpm/tpm'
