Configure tmux to copy into clipboard

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,7 +11,7 @@ set -g status-right '#{battery_status_bg} Batt: #{battery_icon} #{battery_percen
 set-window-option -g mode-keys vi
 bind P paste-buffer
 bind -T copy-mode-vi v send-keys -X begin-selection
-bind -T copy-mode-vi y send-keys -X copy-selection
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -in -selection clipboard"
 bind -T copy-mode-vi r send-keys -X rectangle-toggle
 bind -T copy-mode-vi Q send-keys -X stop-selection
 
@@ -20,7 +20,7 @@ bind C-p run "\
      paste.exe \
    | tmux load-buffer -b windows-paste-buffer - \
   && tmux paste-buffer -b windows-paste-buffer"
-bind -T copy-mode-vi Y send-keys -X copy-pipe "clip.exe"
+bind -T copy-mode-vi Y send-keys -X copy-pipe-and-cancel "clip.exe"
 
 # True color!
 set-option -g default-terminal "tmux-256color"
